--- a/config/database.yml
+++ b/config/database.yml
@@ -10,9 +10,12 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.sqlite3
-
+  adapter: postgresql
+  encoding: unicode
+  host: 'localhost'
+  database: 'stocky'
+  username: 'postgres'
+  password: 'postgres'
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
