--- a/test/fixtures/translates.yml
+++ b/test/fixtures/translates.yml
@@ -1,21 +1,25 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  string_add: MyString
-  gta_id: MyString
-  gta_original: MyString
+  file_id: 1
+  trans_id: MyString
+  original: MyText
+  translate: MyText
+  user: one
   status: 1
-  xml_name: MyString
-  xml_palce: 1
-  user_id: one
-  type: 1
+  comment: 
+  extra_1: MyString
+  extra_2: MyString
+  extra_3: MyString
 
 two:
-  string_add: MyString
-  gta_id: MyString
-  gta_original: MyString
+  file_id: 1
+  trans_id: MyString
+  original: MyText
+  translate: MyText
+  user: two
   status: 1
-  xml_name: MyString
-  xml_palce: 1
-  user_id: two
-  type: 1
+  comment: 
+  extra_1: MyString
+  extra_2: MyString
+  extra_3: MyString
