--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "stocky",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.10.1",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
-    "bootstrap": "4.3.1",
+    "bootstrap": "4",
     "bootstrap-icons": "^1.4.0",
-    "jquery": "^3.5.1",
+    "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "stimulus": "^2.0.0",
     "turbolinks": "^5.2.0"
