--- a/config/database.yml
+++ b/config/database.yml
@@ -8,12 +8,14 @@ default: &default
   adapter: postgresql
   encoding: unicode
   host: 'localhost'
+  port: 5432
 
 development:
   <<: *default
   database: 'stocky'
   username: 'postgres'
   password: 'postgres'
+  port: 5333
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
